--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,9 @@
 [build]
-base = "/"
-publish = "dist/"
+  command = "npm run build"
+  publish = "dist"
+
+[[redirects]]
+  from = "/assets/*"
+  to = "/assets/:splat"
+  status = 200
+  force = true
