--- a/netlify.toml
+++ b/netlify.toml
@@ -6,7 +6,11 @@
   NODE_VERSION = "18.12.1"
 
   [[redirects]]
+  from = "/assets/*"
+  to = "/assets/:splat"
+  status = 200
+
+[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-
