funciona el npm run preview y cambie la version node en toml, y el tipo MIME en toml

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,10 +5,16 @@
   [build.environment]
   NODE_VERSION = "18.12.1"
 
-  [[redirects]]
-  from = "/assets/*"
-  to = "/assets/:splat"
-  status = 200
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Content-Type = "text/html"
+
+
+[[redirects]]
+from = "/assets/*"
+to = "/assets/:splat"
+status = 200
 
 [[redirects]]
   from = "/*"
