un minimo password

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ VITE_FIREBASE_PROJECT_ID=db-pacientes
 VITE_FIREBASE_STORAGE_BUCKET=db-pacientes.appspot.com
 VITE_FIREBASE_MESSAGING_SENDER_ID=404316742828
 VITE_FIREBASE_APP_ID=1:404316742828:web:9316fea39b46abfcd4ab09
+
+VITE_PASSWORD = Paparula
